--- a/HTML/css/pink-theme.css
+++ b/HTML/css/pink-theme.css
@@ -1718,11 +1718,16 @@ ol.digit-list p {
 }
 
 #hero-11 {
-  background-image: url(../images/hero-11.jpg);
+  background-image: url(../images/NailsBG3.jpg);
   padding-top: 160px;
   padding-bottom: 110px;
 }
-
+.blush-H2{
+  font-weight: bold;
+}
+.blush-p {
+  font-size: 3.5rem;
+}
 #hero-12 .hero-overlay {
   height: 100%;
   background-color: rgba(10, 10, 10, .6);
